--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -2,6 +2,12 @@ version: '3.8'
 
 name: gocrafter-server
 
+volumes:
+  mysql-local:
+    driver: local
+  redis-local:
+    driver: local
+
 services:
   mysql:
     container_name: gocrafter-mysql
@@ -22,6 +28,19 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+
+  redis:
+    container_name: gocrafter-redis
+    image: redis:7.2.4
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./docker/redis/redis.conf:/etc/redis.conf
+      - redis-local:/data
+    tty: true
+    depends_on:
+      mysql:
+        condition: service_healthy
 
   generator:
     container_name: gocrafter-generator
@@ -54,7 +73,3 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-
-volumes:
-  mysql-local:
-    driver: local
