--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: docker compose -f docker-compose.test.yaml up -d --build
+        run: docker compose -f docker-compose.test.yaml up -d
 
-      - name: usecase Test
+      - name: Sleep for 10 seconds
+        run: sleep 10
+
+      - name: Usecase Test
         run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./api/game/usecase/...
 
       - name: Domain Test
